tests/snapshots/ui_smoke__library_page_renders_without_panic.snap
---
source: tests/ui_smoke.rs
expression: frame
---
 F1 Library  │  F2 Queue  │  F3 Quick Play  │  F4             ⏮︎   ⏵︎   ⏸︎   ⏹︎   ⏭︎ 
┌ Artists → Albums · Library: A┐┌ Songs ───────────────────────────────────────┐
│                              ││Select an album to view songs                 │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
└──────────────────────────────┘└──────────────────────────────────────────────┘
┌ Now Playing ─────────────────────────────────────────────────────────────────┐
│                               No track playing                               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
q:Quit │ p/Space:Pause │ h:Prev │ l:Next                                        
n:Star playing │ m:Star selected │ a:Cho
